--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,14 @@
     "compilerOptions": {
         "module": "system",
         "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-      
-        "sourceMap": true
-    }
+        "removeComments": false,
+        "preserveConstEnums": true
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
+    ]
 }
